# cardano-node-tests

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .reponotes  .rstcheck.cfg  .source.dev  AGENTS.md  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ai_run.sh  check_dev_env.sh  check_env.sh  cli_coverage.py  deploy_doc.sh  flake.nix  garnix.yaml  moog-cli.vkey  mypy.ini  poetry_update_deps.sh  prepare_test_env.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements-freeze.txt  requirements_freeze.txt  run_tests.sh  setup.cfg  setup.py  setup_dev_venv.sh  setup_venv.sh  shell.nix  testnet_cleanup.sh  zizmor.yml
.buildkite/: allure_install.sh  cli_coverage.sh  db_sync_full_sync.yml  db_sync_snapshot_restoration.yml  grep_errors.sh  nightly.sh  nightly.yml  nightly_dbsync.sh  nightly_dbsync.yml  nightly_upgrade.sh  nightly_upgrade.yml  nightly_upgrade_pytest.sh  niv_update_cardano_node.sh  niv_update_func.sh  nix_override_cardano_node.sh  node_sync_tests.sh  node_sync_tests.yml  node_sync_tests_pull.sh  on_demand.yml  on_demand_dbsync.yml  report.sh  results.sh  run.sh  save_artifacts.sh  sync_tests.yml  sync_tests_pull.sh  sync_tests_push.sh
.circleci/: config.yml
.github/: CODEOWNERS  cli_coverage.sh  common.sh  create_results.sh  dependabot.yml  env_dbsync_config  env_nightly  env_nightly_alonzo_tx  env_nightly_cli  env_nightly_conway_bootstrap  env_nightly_conway_cc  env_nightly_conway_dbsync  env_nightly_conway_nocc  env_nightly_dbsync  env_nightly_dbsync_pv10  env_nightly_gov_cc  env_nightly_gov_nocc  env_nightly_mary_tx  env_nightly_mixed  env_nightly_p2p  env_nightly_pv10  env_nightly_shelley_tx  env_nightly_upgrade  env_regression  env_regression_dbsync  grep_errors.sh  load-gh-env.sh  nix_override_cardano_node.sh  node_upgrade.sh  node_upgrade_pytest.sh  regression.sh  reqs_coverage.sh  results.sh  run_tests.sh  save_artifacts.sh  setup_venv.sh  source_acropolis.sh  source_cardano_cli.sh  source_cardano_node.sh  source_dbsync.sh  (+2 more)
.github/workflows/: automated_tests_results.yaml  code_checks.yaml  codeql.yml  dbsync_config.yaml  (+41 more)
agent_docs/: ci_analysis_prompt.md  commits.md  failure_analysis_prompt.md  fixtures_caching.md  new_tests.md  resource_management.md  running_tests.md  subtests.md  upgrade_failure_analysis_prompt.md
cabal_build_tests/: Dockerfile  README.md  install-node.sh  readme.md  run-fedora.sh  run-ubuntu.sh  run.sh
cardano_node_tests/: block_production_graph.py  cardano_cli_coverage.py  chang_us_coverage.py  defragment_utxos.py  dump_requirements_coverage.py  prepare_cluster_scripts.py  split_topology.py  testnet_cleanup.py  testnet_cleanup_info.py
db_sync_tests/: README.md  aws_db_utils.py  db_sync_snapshot_restoration.py  db_sync_tests.py  generate_plot.py  shell.nix  sql_ddl_and_queries.txt  utils.py  write_snapshot_restoration_test_data_to_db.py  write_test_data_to_db.py
doc/: contributing.md  mir_cert_test_example.md  mir_cert_test_example_manual_steps.md  plutus.md  quality_control_strategy.md  running_local_cluster.md  stake_credential_history_tool.md  test_types.md  uat_strategy.md
docker/: .dockerignore  Dockerfile  Dockerfile.config  Dockerfile.dockerignore  README.md  antithesis_run.sh  docker-compose.yaml  docker-compose.yml  node_run.sh
docker-antithesis/: Dockerfile  README.md  antithesis_run.sh  docker-compose.yaml  node_run.sh
docs/: .buildinfo  CNAME  Makefile  cardano_node_tests.cluster_management.html  cardano_node_tests.html  cardano_node_tests.pytest_plugins.html  cardano_node_tests.tests.html  cardano_node_tests.tests.tests_conway.html  cardano_node_tests.tests.tests_plutus.html  cardano_node_tests.tests.tests_plutus_v2.html  cardano_node_tests.tests.tests_plutus_v3.html  cardano_node_tests.utils.html  genindex.html  how-tos.html  index.html  modules.html  objects.inv  process.html  py-modindex.html  readme.html  search.html  searchindex.js  test_plans.html  test_results.html
framework_tests/: conftest.py  test_cluster_getter.py  test_resources_management.py  test_resources_naming.py  test_subtests.py
nix/: allure.nix  cardano-clusterlib.nix  default.nix  pytest-allure.nix  pytest-select.nix  python-packages.nix  sources.json
plutus_src/: mint-tokenname.hs  time_range.hs  witness-redeemer.hs
runner/: Dockerfile  cli_coverage.sh  create_results.sh  entrypoint.sh  env_nightly  env_nightly_cli  env_nightly_dbsync  env_nightly_pv11  env_nightly_upgrade  grep_errors.sh  load-gh-env.sh  node_upgrade.sh  node_upgrade_pytest.sh  regression.sh  reqs_coverage.sh  run_tests.sh  runc.sh  save_artifacts.sh  setup_venv.sh  source_cardano_cli.sh  source_cardano_node.sh  source_dbsync.sh  source_tx_centrifuge.sh
scripts/: analyze_failures.sh  build_and_link_node_bins.sh  check_dev_env.sh  clusterlib_reinstall_editable.sh  common.sh  deploy_doc.sh  poetry_update_lock.sh  postgres-setup.sh  postgres-start-nix.sh  postgres-start.sh  reinstall_editable.sh  restart_dev_cluster.sh  setup_dev_venv.sh  setup_test_env.sh  test_block_production.sh  test_node_ipc_shutdown.sh  test_node_reconnect.sh  test_rollbacks.sh  testnet_cleanup.sh  update_node_bins.sh  uv_update_lock.sh
smash_tests/: Pipfile  README.md  conftest.py  test_smash_local_server.py
src_docs/: Makefile  chang_user_stories_template.md  chang_user_stories_template.rst  requirements_mapping.json
sync_tests/: aws_db_utils.py  blockfrost_utils.py  cabal.project  cabal.project.local  create_db.py  explorer_utils.py  get_node_cli_nightly_last_run.py  gitpython_utils.py  nightly_tests_write_values_to_db.py  node_create_db.py  node_sync_test.py  node_write_mainnet_tx_count_per_epoch.py  node_write_sync_values_to_db.py  node_write_values_to_db.py  results_create_db.py  results_write_values_to_db.py  sqlite_utils.py  sync_results.db  sync_test.py  sync_test_mainnet.sh  sync_times_ci_testnet.sh  utils.py  write_values_to_db.py
testnets_bootstrap_template/: README.md  dbsync-config.yaml  faucet_setup.sh  postgres-setup.sh  run-cardano-dbsync  run_dbsync.sh  run_relay1.sh
(+1015 files in other folders)
