[project]
name = "cardano-node-tests"
version = "0.1.0"
description = "Functional tests for cardano-node"
authors = [
    { name = "Martin Kourim", email = "martin.kourim@iohk.io" },
    { name = "Sara Tomaz", email = "sara.tomaz@iohk.io" },
    { name = "Artur Wieczorek", email = "artur.wieczorek@iohk.io" },
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "cardano",
    "cardano-node",
    "cardano-cli",
    "cardano-node-tests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PyYAML>=6.0.2,<7",
    "allure-pytest>=2.14.3,<3",
    "cardano-clusterlib>=0.9.8,<0.10",
    "cardonnay>=0.2.10,<0.3",
    "cbor2>=5.6.5,<6",
    "filelock>=3.18.0,<4",
    "hypothesis>=6.135.17,<7",
    "psycopg2-binary>=2.9.10,<3",
    "pydantic>=2.11.7,<3",
    "pygithub>=2.6.1,<3",
    "pytest-html>=4.1.1,<5",
    "pytest-metadata>=3.1.1,<4",
    "pytest-order>=1.3.0,<2",
    "pytest-select>=0.1.2,<0.2",
    "pytest-subtests>=0.14.2,<0.15",
    "pytest-xdist>=3.7.0,<4",
    "pytest>=8.4.1,<9",
    "requests>=2.32.4,<3",
]

[project.urls]
Homepage = "https://tests.cardano.intersectmbo.org/"
Repository = "https://github.com/IntersectMBO/cardano-node-tests"
Documentation = "https://tests.cardano.intersectmbo.org/"
"Bug Tracker" = "https://github.com/IntersectMBO/cardano-node-tests/issues"

[project.scripts]
testnet-cleanup = "cardano_node_tests.testnet_cleanup:main"
defragment-utxos = "cardano_node_tests.defragment_utxos:main"
prepare-cluster-scripts = "cardano_node_tests.prepare_cluster_scripts:main"
split-topology = "cardano_node_tests.split_topology:main"
cardano-cli-coverage = "cardano_node_tests.cardano_cli_coverage:main"

[dependency-groups]
dev = [
    "ipython>=9.3.0,<10",
    "mypy>=1.16.1,<2",
    "pre-commit>=4.0.1,<5",
    "pyrefly>=0.22.0,<0.23",
    "pyright>=1.1.404,<2",
    "types-PyYAML>=6.0.12.20250516,<7",
    "types-requests>=2.32.4.20250611,<3",
]
docs = [
    "Sphinx>=8.2.3,<9",
    "m2r2>=0.3.4,<0.4",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxemoji>=0.3.1,<0.4",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ANN", "ARG", "B", "C4", "C90", "D", "DTZ", "E", "EM", "F", "FURB", "I001", "ISC", "N", "PERF", "PIE", "PL", "PLE", "PLR", "PLW", "PT", "PTH", "Q", "RET", "RSE", "RUF", "SIM", "TRY", "UP", "W", "YTT"]
ignore = ["ANN401", "B905", "D10", "D203", "D212", "D213", "D214", "D215", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D413", "ISC001", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PT001", "PT007", "PT012", "PT018", "PT023", "PTH123", "RET504", "TRY002", "TRY301", "UP006", "UP007", "UP035"]

[tool.ruff.lint.per-file-ignores]
"cardano_node_tests/utils/model_ekg.py" = ["N815"]
"cardano_node_tests/tests/**.py" = ["ANN"]
"framework_tests/**.py" = ["ANN"]
"src_docs/**.py" = ["ANN"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.11"
show_error_context = true
verbosity = 0
ignore_missing_imports = true
follow_imports = "normal"
no_implicit_optional = true
allow_untyped_globals = false
warn_unused_configs = true
warn_return_any = true

[tool.pyrefly]
python_version = "3.11.0"
project_includes = ["cardano_node_tests", "framework_tests"]
replace_imports_with_any = ["allure.*", "hypothesis.*", "pytest.*", "pytest_subtests.*", "psycopg2.*", "requests.*"]
ignore_errors_in_generated_code = true
use_untyped_imports = true
ignore_missing_source = true

[tool.pyright]
pythonVersion = "3.11"
reportPrivateImportUsage = false

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
addopts = "-ra -vvv"
filterwarnings = [
    # TODO - not necessary for up-to-date hypothesis
    "ignore:.*You can change it to a module- or session-scoped fixture.*:FutureWarning",
]
markers = [
    "dbsync: test(s) for node + optionaly cardano-db-sync",
    "needs_dbsync: test(s) for cardano-db-sync",
    "dbsync_config: test(s) for cardano-db-sync config - run on a single cluster only",
    "smash: test(s) for node + optionaly cardano-smash",
    "testnets: test(s) can run on testnets, like Shelley_qa",
    "long: test(s) run for a long time on testnets",
    "smoke: fast test(s) under 1 minute",
    "upgrade_step1: test(s) for upgrade testing in step1",
    "upgrade_step2: test(s) for upgrade testing in step2",
    "upgrade_step3: test(s) for upgrade testing in step3",
    "plutus: test(s) for plutus",
    "team_plutus: test(s) from Plutus dev team",
    "disabled: temporarily disabled test(s)",
    "noop: placeholder marker",
]
