[flake8]
ignore = E128,E811,W503,E203
max_line_length = 100

[pydocstyle]
inherit = false
# google convention + D413
ignore = D10,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411,D413
match = .*\.py

[metadata]
name = cardano-node-tests
url = https://github.com/input-output-hk/cardano-node-tests
maintainer = IOG Cardano Node QA Team
maintainer_email = martin.kourim@iohk.io
description = Functional tests for cardano-node
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    allure-pytest
    cardano-clusterlib >= 0.1.51
    cbor2
    filelock
    hypothesis
    psycopg2-binary
    pydantic
    pytest
    pytest-html
    pytest-metadata
    pytest-order
    pytest-xdist
    pyyaml
    requests
    setuptools >= 21.0.0

[options.entry_points]
console_scripts =
    testnet-cleanup = cardano_node_tests.testnet_cleanup:main
    prepare-cluster-scripts = cardano_node_tests.prepare_cluster_scripts:main
    cardano-cli-coverage = cardano_node_tests.cardano_cli_coverage:main
