[flake8]
ignore = E128,E811,W503,E203,PT001,PT004,PT007,PT012,PT018,PT023,PL123
max_line_length = 100

[pydocstyle]
inherit = false
# google convention + D413
ignore = D10,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411,D413
match = .*\.py

[rstcheck]
ignore_directives =
    automodule,
    mdinclude,
ignore_messages=(Undefined substitution referenced: \":)

[metadata]
name = cardano-node-tests
url = https://github.com/input-output-hk/cardano-node-tests
maintainer = IOG Cardano Node QA Team
maintainer_email = martin.kourim@iohk.io
description = Functional tests for cardano-node
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    allure-pytest
    cardano-clusterlib >= 0.4.0rc2,<0.5.0
    cbor2
    filelock
    hypothesis
    psycopg2-binary
    pydantic
    pytest == 7.1.2
    pytest-html
    pytest-metadata
    pytest-order
    pytest-select
    pytest-xdist == 2.5.0
    pyyaml
    requests
    setuptools >= 60.5.0

[options.entry_points]
console_scripts =
    testnet-cleanup = cardano_node_tests.testnet_cleanup:main
    prepare-cluster-scripts = cardano_node_tests.prepare_cluster_scripts:main
    cardano-cli-coverage = cardano_node_tests.cardano_cli_coverage:main
